Fixed the branch name

--- a/.github/workflow/hello_world.yml
+++ b/.github/workflow/hello_world.yml
@@ -6,7 +6,7 @@ name: Hello_world
 # events but only for the main branch
 on:
   push:
-    branches: [ main ]
+    branches: [ feature/integrate-ci-cd ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
