--- a/.github/workflows/run_unit_tests.yml
+++ b/.github/workflows/run_unit_tests.yml
@@ -3,16 +3,31 @@ name: PR_unit_tests
 on:
   push:
     branches:
-    - 'feature/integrate-ci-cd'
+      - 'feature/integrate-ci-cd' # Adjust this branch name to match the one you want to trigger the workflow on
 
 jobs:
-  Unit-test:
-  name: Run unit tests on PR in main
-  runs-on: ubuntu-latest
+  build:
+    runs-on: ubuntu-latest
 
-  steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-java@v1
-      with: {java-version: 1.8}
-    - name: Run unit tests
-      run: ./gradlew test
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v2
+
+      - name: Set up JDK 8
+        uses: actions/setup-java@v2
+        with:
+          distribution: 'adopt'
+
+      - name: Cache Gradle Dependencies
+        uses: actions/cache@v2
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
+      - name: Build with Gradle
+        run: ./gradlew build
+
+      - name: Run Tests
+        run: ./gradlew test
