--- a/.github/workflows/run_unit_tests.yml
+++ b/.github/workflows/run_unit_tests.yml
@@ -3,31 +3,23 @@ name: PR_unit_tests
 on:
   push:
     branches:
-      - 'feature/integrate-ci-cd' # Adjust this branch name to match the one you want to trigger the workflow on
+      - 'feature/integrate-ci-cd'
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v1
 
-      - name: Set up JDK 8
-        uses: actions/setup-java@v2
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
         with:
-          distribution: 'adopt'
+          java-version: 1.8
 
-      - name: Cache Gradle Dependencies
-        uses: actions/cache@v2
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
+      # Execute unit tests
+      - name: Unit Test
+        run: ./gradlew testDebugUnitTest
 
-      - name: Build with Gradle
-        run: ./gradlew build
-
-      - name: Run Tests
-        run: ./gradlew test
+      - name: Android Test Report
+        uses: asadmansr/android-test-report-action@v1.2.0
+        if: ${{ always() }} # IMPORTANT: run Android Test Report regardless
